# hero-api

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2020-08-27-141801_create_heroes/: up.sql
src/: hero.rs  main.rs
